<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center"
    android:weightSum="1"
    android:fitsSystemWindows="true"
    android:onClick="exit">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/user_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:layout_marginHorizontal="@dimen/list_item_element_spacing"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:cardBackgroundColor="?attr/colorPrimary"
        app:cardCornerRadius="@dimen/list_item_background_corner_radius"
        android:onClick="intercept">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/list_item_element_spacing_half"
                android:paddingHorizontal="@dimen/list_item_element_spacing_half">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_alignParentLeft="true">
                    <com.jordoncheng.smweibo.views.StatusAvatarImageView
                        android:id="@+id/list_item_avatar"
                        android:layout_width="@dimen/list_item_avatar_height"
                        android:layout_height="@dimen/list_item_avatar_height"
                        android:layout_margin="@dimen/list_item_element_spacing_half" />
                    <TableLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="@dimen/list_item_element_spacing_half">
                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:id="@+id/list_item_status_screen_name"
                                android:textSize="@dimen/list_item_screen_name_text_size"
                                android:textStyle="bold"
                                android:gravity="bottom"
                                android:layout_height="@dimen/list_item_avatar_height_half"
                                android:layout_width="wrap_content"
                                android:textColor="?attr/listItemBackground" />
                        </TableRow>
                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:id="@+id/list_item_status_name"
                                android:textSize="@dimen/list_item_name_text_size"
                                android:layout_height="@dimen/list_item_avatar_height_half"
                                android:layout_width="wrap_content"
                                android:gravity="top"
                                android:textColor="?attr/colorAccent" />
                        </TableRow>

                    </TableLayout>

                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="@dimen/list_item_element_spacing_half"
                android:layout_marginVertical="@dimen/list_item_element_spacing">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/list_item_element_spacing">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/statuses_count"
                        android:textSize="@dimen/list_item_text_size"
                        android:textColor="?attr/listItemBackground"/>
                    <TextView
                        android:id="@+id/statuses_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:textSize="@dimen/list_item_text_size"
                        android:textColor="?attr/listItemBackground"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/list_item_element_spacing">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/friends_count"
                        android:textSize="@dimen/list_item_text_size"
                        android:textColor="?attr/listItemBackground"/>
                    <TextView
                        android:id="@+id/friends_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:textSize="@dimen/list_item_text_size"
                        android:textColor="?attr/listItemBackground"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/list_item_element_spacing">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/followers_count"
                        android:textSize="@dimen/list_item_text_size"
                        android:textColor="?attr/listItemBackground" />
                    <TextView
                        android:id="@+id/followers_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:textSize="@dimen/list_item_text_size"
                        android:textColor="?attr/listItemBackground" />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/list_item_element_spacing">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/favourites_count"
                        android:textSize="@dimen/list_item_text_size"
                        android:textColor="?attr/listItemBackground"/>
                    <TextView
                        android:id="@+id/favourites_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:textSize="@dimen/list_item_text_size"
                        android:textColor="?attr/listItemBackground"/>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>